# mudalang

./: AbsMUDA.hs  CodeGenAVX.hs  CodeGenLLVM.hs  CodeGenNEON.hs  CodeGenSSE.hs  CodeGenVMX.hs  DocMUDA.tex  IR.hs  LICENSE  LexMUDA.hs  LexMUDA.x  MUDA.cabal  MUDA.cf  Main.hs  Makefile  NameSpace.hs  ParMUDA.hs  ParMUDA.y  PrintMUDA.hs  README.txt  Sema.hs  Simplify.hs  SkelMUDA.hs  Sym.hs  Syntax.hs  TestMUDA.hs  TypeMUDA.hs  input.mu
bench/: BlackScholesMUDA.c  BlackScholesMUDA.h  BlackScholesMUDA.mu  BlackScholesReference.c  BlackScholesReference.h  Makefile  main.c  mudaintrin_sse.h
doc/: Makefile  NOTE.txt
doc/rst/: Makefile  conf.py  download.rst  langspec.rst  tutorial.rst
doc/webdoc/: Makefile  README.txt  muda.ini
examples/: Makefile  dot4.mu  isect.mu  tester.py
examples/BlackScholes/: BlackScholesMUDA.mu  BlackScholes_gold.cpp  BlackScholes_gold.h  Makefile  PERFORMANCE.txt  (+2 more)
include/: muda.h
junk/: max.ll  max.s
libm/: Makefile  README.txt  cos.mu  exp.mu  exp_relative_err.txt  log.mu  log2.mu  log2_relative_err.txt  pow.mu  sin.mu  sqrt.mu
libmuda/: Makefile  muda.c  prof.c  prof.h
t/: Makefile  README.txt  add.mu  all01.mu  and.mu  any01.mu  arith.mu  arith1.mu  arith2.mu  array00.mu  assignswizzle00.mu  assignswizzle01.mu  bit.mu  block.mu  ceil.mu  cross4.mu  div.mu  divapprox.mu  extract.mu  extract2.mu  floor.mu  gather00.mu  gather01.mu  heavensDoor.mu  if.mu  if1.mu  if2.mu  itoiv.mu  loop01.mu  max.mu  min.mu  mul.mu  or.mu  output00.mu  round.mu  shiftl.mu  shiftr.mu  struct01.mu  struct02.mu  struct03.mu  (+14 more)
tutorial/: tutorial1.mu
(+89 files in other folders)
