Name:              muda
Version:           0.1
Description:       MUDA compiler written in Haskell.
License:           BSD4
License-file:      LICENSE
Author:            Syoyo Fujita
Maintainer:        syoyo@lucillerender.org
Build-Depends:     base, haskell98, mtl, containers, parsec, regex-compat, array, filepath

Executable:        mudah
Main-is:           Main.hs
ghc-options:       -O
